--- a/index.html
+++ b/index.html
@@ -252,7 +252,15 @@ ZEINA ALDOHA
 <button>اطلب الآن عبر واتساب</button>
 </a>
 </div>
-
+<div class="card">
+<img src="abaya-white.jpg" alt="عباية بيضاء">
+<h3>عباية بيضاء فاخرة</h3>
+<p>كود المنتج: A003</p>
+<p class="price">350 ريال قطري</p>
+<a href="https://wa.me/974XXXXXXXX?text=السلام%20عليكم%0Aأرغب%20في%20طلب%20هذه%20العباية%20الفاخرة.%0A%0Aاسم%20المنتج:%20عباية%20بيضاء%20فاخرة%0Aكود%20المنتج:%20A003%0Aالسعر:%20350%20ريال%20قطري">
+<button>اطلب الآن عبر واتساب</button>
+</a>
+<
 </div>
 
 <footer>
